# particlelife3d_bevy

./: .gitignore  Cargo.toml
.kiro/specs/color-distribution-panel/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/egui-settings-panel/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/gpu-force-compute/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
proptest-regressions/physics/gpu/: sort.txt
src/: camera.rs  config.rs  debug.rs  main.rs  palette.rs  positioners.rs  settings_panel.rs  tracking.rs  traits.rs
src/physics/: backend.rs  bodies.rs  forces.rs  islands.rs  mod.rs  physics.rs
src/physics/gpu/: buffers.rs  detect.rs  extract.rs  mod.rs  node.rs  pipeline.rs  readback.rs  shader.wgsl  sort.rs  tests.rs
