[package]
name = "particlelife3d_bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.19.0", default-features = false, features = [
    "3d_bevy_render",
    "bevy_camera",
    "bevy_dev_tools",
    "bevy_shader",
    "default_app",
    "default_platform",
    "ui_api",
    "ui_bevy_render",
] }
bevy_egui = "0.40"
bytemuck = { version = "1.25.0", features = ["derive"] }
crossbeam-channel = "0.5.15"
num-traits = "0.2.19"
rand = "0.10.1"
rand_chacha = "0.10.0"
rayon = "1.12.0"

[dev-dependencies]
proptest = "1.6"

[profile.release]
codegen-units = 1
